; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_lib.c_SSL_CTX_set_default_verify_store.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_lib.c_SSL_CTX_set_default_verify_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SSL_CTX_set_default_verify_store(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 (...) @X509_LOOKUP_store()
  %9 = call i32* @X509_STORE_add_lookup(i32 %7, i32 %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = call i32 (...) @ERR_set_mark()
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @X509_LOOKUP_add_store(i32* %15, i32* null)
  %17 = call i32 (...) @ERR_pop_to_mark()
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %13, %12
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32* @X509_STORE_add_lookup(i32, i32) #1

declare dso_local i32 @X509_LOOKUP_store(...) #1

declare dso_local i32 @ERR_set_mark(...) #1

declare dso_local i32 @X509_LOOKUP_add_store(i32*, i32*) #1

declare dso_local i32 @ERR_pop_to_mark(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
